--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ deploy:
   provider: elasticbeanstalk
   region: us-east-1
   app: 'docker-react'
-  env: 'DockerReact-env-1'
+  env: 'DockerReact-env'
   bucket_name: 'elasticbeanstalk-us-east-1-152969603041'
   bucket_path: 'docker-react'
   on:
